# lsp-lm

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  setup.cfg  setup.py
benchmark/: README.md  codebert-export.py  codebert-plot.py  codebert-sample.py  timings.csv
cmake/: BuildType.cmake
data/: fetch-enwiki-dumps.sh
langmod/: CMakeLists.txt  wiki.cc  wiki.h
langmod/data/: phrase_sampler.py
langmod/mediawiki/: CMakeLists.txt  util.cc  util.h  wiki.cc  wiki.h
langmod/mediawiki2parquet/: CMakeLists.txt  bz2.cc  bz2.h  main.cc  queue.h  transform.cc  transform.h  writer.cc  writer.h
lsp/: __main__.py  app.py  cli.py  completion.py  corpus.py  lsp.py  rpc.py
lsp/lsp/: __init__.py  error.py  types.py
lsp/lsp/syncio/: __init__.py  lsp.py  session.py
lsp/syncio/: __init__.py  session.py
notebooks/: lm-mlp-bow-en.py
plugin/nvim/: lsp-lm.lua
