# See links below for documentaion notes.
#
# https://packaging.python.org/guides/distributing-packages-using-setuptools/
# https://setuptools.readthedocs.io/en/latest/setuptools.html

[metadata]
name = lsp-lm
url = https://github.com/daskol/lsp-lm
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Linux
project_urls =
    Documentation = https://github.com/daskol/lsp-lm/wiki
    Source = https://github.com/daskol/lsp-lm/issues
    Tracker = https://github.com/daskol/lsp-lm/issues
clasifiers =
    Development Status :: 4 - Beta
    Environment :: No Input/Output (Daemon)
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development
    Topic :: Text Editors
    Topic :: Text Editors :: Integrated Development Environments (IDE)
    Topic :: Text Editors :: Text Processing
    Topic :: Text Editors :: Word Processors
    Topic :: Text Processing :: Linguistic
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.9,<4
install_requires =
    click
    numpy
    tensorflow
tests_require = pytest>=6.0

[options.packages.find]
where = .
